[project]
name = "infrahub-exporter"
version = "0.1.0"
description = "exporter for Infrahub metrics and service discovery"
authors = [{ name = "OpsMill", email = "info@opsmill.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "infrahub-sdk[all]>=1.13,<2.0",
    "fastapi>=0.116.2",
    "prometheus-client>=0.23.1",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "cachetools>=6.2.0",
    "tenacity>=9.1.2",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://opsmill.com"
Repository = "https://github.com/opsmill/infrahub"
Documentation = "https://docs.infrahub.app/integrations/exporter/"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.uv]
package = true

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
disable_error_code = ["type-abstract"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infrahub_exporter"]
