[project]
name = "infrahub-exporter"
version = "0.1.0"
description = "exporter for Infrahub metrics and service discovery"
authors = [{ name = "OpsMill", email = "info@opsmill.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "infrahub-sdk[all]>=1.13,<2.0",
    "fastapi>=0.116.2",
    "prometheus-client>=0.23.1",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "cachetools>=6.2.0",
    "tenacity>=9.1.2",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://opsmill.com"
Repository = "https://github.com/opsmill/infrahub"
Documentation = "https://docs.infrahub.app/integrations/exporter/"

[dependency-groups]
dev = [
    "invoke>=2.2.1,<3.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
    "yamllint>=1.37.1",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
exclude = [".venv/", ".dev/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["type-abstract"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infrahub_exporter"]
